# WiFi-Controller-ESP32

./: .gitignore  CMakeLists.txt
components/HttpServer/: CMakeLists.txt  HttpServer.cpp  HttpServer.hpp
components/HttpServer/WebPage/: index.html  package-lock.json  websocket.js
components/LedControl/: CMakeLists.txt  LedControl.cpp  LedControl.hpp
components/WifiControl/: CMakeLists.txt  WifiControl.cpp  WifiControl.hpp
main/: CMakeLists.txt  main.cpp
